load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "session",
    srcs = [
        "history.gala",
        "session.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/session",
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//json",
        "@gala//strings",
    ],
    visibility = ["//visibility:public"],
)

gala_go_test(
    name = "session_test",
    srcs = ["session_test.gala"],
    pkg = "session",
    lib_srcs = [
        "history.gala",
        "session.gala",
    ],
    deps = [
        ":session",
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//json",
        "@gala//strings",
    ],
)
