load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "session",
    srcs = [
        "history.gala",
        "session.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/session",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//json",
        "@gala//strings",
    ],
)

gala_test(
    name = "session_test",
    srcs = ["session_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/session",
    lib_srcs = [
        "history.gala",
        "session.gala",
    ],
    pkg = "session",
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//json",
        "@gala//strings",
    ],
)
