load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "team",
    srcs = ["team.gala"],
    importpath = "github.com/martianoff/gala_team/app/team",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
    ],
)

gala_go_test(
    name = "team_test",
    srcs = ["team_test.gala"],
    lib_srcs = ["team.gala"],
    pkg = "team",
    deps = [
        ":team",
        "@gala//collection_immutable",
    ],
)
