load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "team",
    srcs = ["team.gala"],
    importpath = "github.com/martianoff/gala_team/app/team",
    deps = [
        "@gala//collection_immutable",
    ],
    visibility = ["//visibility:public"],
)

gala_test(
    name = "team_test",
    srcs = ["team_test.gala"],
    pkg = "team",
    lib_srcs = ["team.gala"],
    deps = [
        ":team",
        "@gala//collection_immutable",
    ],
)
