load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "team",
    srcs = ["team.gala"],
    importpath = "github.com/martianoff/gala_team/app/team",
    visibility = ["//visibility:public"],
    deps = ["@gala//collection_immutable"],
)

gala_test(
    name = "team_test",
    srcs = ["team_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/team",
    lib_srcs = ["team.gala"],
    pkg = "team",
    deps = ["@gala//collection_immutable"],
)
