load("@rules_gala//gala:defs.bzl", "gala_library")

gala_library(
    name = "testdriver",
    srcs = ["testdriver.gala"],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala_team/app/testdriver",
    visibility = ["//visibility:public"],
    deps = [
        "//app/fsm",
        "//app/team",
        "//app/ui",
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//json",
    ],
)
