load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "ui",
    srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/ui",
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
    visibility = ["//visibility:public"],
)

gala_go_test(
    name = "update_test",
    srcs = ["update_test.gala"],
    pkg = "ui",
    lib_srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)

gala_go_test(
    name = "view_test",
    srcs = ["view_test.gala"],
    pkg = "ui",
    lib_srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)
