load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "ui",
    srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    importpath = "github.com/martianoff/gala_team/app/ui",
    visibility = ["//visibility:public"],
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)

gala_go_test(
    name = "update_test",
    srcs = ["update_test.gala"],
    # The blocking-IO gate (TestNoBlockingIoOnUiThread) reads
    # update.gala as text at runtime; bundle it as a runfile so the
    # bazel sandbox can find it. `gala test` reads it from the package
    # dir directly.
    data = ["update.gala"],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    lib_srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    pkg = "ui",
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//strings",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)

gala_go_test(
    name = "view_test",
    srcs = ["view_test.gala"],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    lib_srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    pkg = "ui",
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)
