load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "ui",
    srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala_team/app/ui",
    visibility = ["//visibility:public"],
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/protocol",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/util",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)

gala_test(
    name = "ui_test",
    srcs = [
        "e2e_test.gala",
        "pump_characterization_test.gala",
        "update_test.gala",
        "view_test.gala",
    ],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala_team/app/ui",
    lib_srcs = [
        "model.gala",
        "update.gala",
        "view.gala",
    ],
    pkg = "ui",
    deps = [
        "//app/consult",
        "//app/directive",
        "//app/fsm",
        "//app/guidance",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/protocol",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/util",
        "//app/version",
        "//app/view",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)
