load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "util",
    srcs = ["collections.gala"],
    importpath = "github.com/martianoff/gala_team/app/util",
    visibility = ["//visibility:public"],
    deps = ["@gala//collection_immutable"],
)

gala_test(
    name = "util_test",
    srcs = ["collections_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/util",
    lib_srcs = ["collections.gala"],
    pkg = "util",
    deps = ["@gala//collection_immutable"],
)
