load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "view",
    srcs = [
        "pipeline_view.gala",
        "team_panel.gala",
    ],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    importpath = "github.com/martianoff/gala_team/app/view",
    visibility = ["//visibility:public"],
    deps = [
        "//app/team",
        "@gala//collection_immutable",
    ],
)

gala_go_test(
    name = "view_test",
    srcs = [
        "pipeline_view_test.gala",
        "team_panel_test.gala",
    ],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    lib_srcs = [
        "pipeline_view.gala",
        "team_panel.gala",
    ],
    pkg = "view",
    deps = [
        ":view",
        "//app/team",
        "@gala//collection_immutable",
    ],
)
