load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "view",
    srcs = [
        "pipeline_view.gala",
        "team_panel.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/view",
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    deps = [
        "//app/team",
        "@gala//collection_immutable",
    ],
    visibility = ["//visibility:public"],
)

gala_test(
    name = "view_test",
    srcs = [
        "pipeline_view_test.gala",
        "team_panel_test.gala",
    ],
    pkg = "view",
    lib_srcs = [
        "pipeline_view.gala",
        "team_panel.gala",
    ],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    deps = [
        ":view",
        "//app/team",
        "@gala//collection_immutable",
    ],
)
