load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "view",
    srcs = [
        "pipeline_view.gala",
        "team_panel.gala",
    ],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala_team/app/view",
    visibility = ["//visibility:public"],
    deps = [
        "//app/team",
        "@gala//collection_immutable",
    ],
)

gala_test(
    name = "view_test",
    srcs = [
        "pipeline_view_test.gala",
        "team_panel_test.gala",
    ],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala_team/app/view",
    lib_srcs = [
        "pipeline_view.gala",
        "team_panel.gala",
    ],
    pkg = "view",
    deps = [
        "//app/team",
        "@gala//collection_immutable",
    ],
)
